tests/pending/pos/tuplePatDef.scala

object Test {
  val (x,y): (String, M) = null
}
